--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,17 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="separator_margin">8dp</dimen>
+    <dimen name="cardview_margin">3dp</dimen>
+    <dimen name="cardview_radius">4dp</dimen>
+    <dimen name="cardview_padding">12dp</dimen>
+    <dimen name="toolbar_icon">24dp</dimen>
+
+    <dimen name="item_title_size">20sp</dimen>
+    <dimen name="item_price_size">28sp</dimen>
+
+    <dimen name="title_size">18sp</dimen>
+    <dimen name="body_size">16sp</dimen>
+    <dimen name="medium_size">14sp</dimen>
+    <dimen name="small_size">12sp</dimen>
+
 </resources>
