--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -21,6 +21,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <include layout="@layout/layout_no_connection" />
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
