--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -23,11 +23,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <include layout="@layout/layout_no_connection" />
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/itemsRecyclerView"
@@ -36,6 +37,7 @@
             android:overScrollMode="never"
             android:padding="@dimen/separator_margin"
             android:scrollbars="none" />
+
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
