--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <dimen name="item_padding">16dp</dimen>
     <dimen name="separator_margin">8dp</dimen>
     <dimen name="cardview_margin">3dp</dimen>
     <dimen name="cardview_radius">4dp</dimen>
